* Fixed failing unit tests

--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,9 @@
             "tsConfig": "tsconfig.dev.json",
             "polyfills": "demo-shell/src/polyfills.ts",
             "stylePreprocessorOptions": {
-              "includePaths": ["lib"]
+              "includePaths": [
+                "lib"
+              ]
             },
             "assets": [
               "demo-shell/src/assets",
@@ -286,8 +288,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["tsconfig.dev.json"],
-            "exclude": ["**/node_modules/**/*", "package.json"]
+            "tsConfig": [
+              "tsconfig.dev.json"
+            ],
+            "exclude": [
+              "**/node_modules/**/*",
+              "package.json"
+            ]
           }
         }
       }
@@ -320,8 +327,12 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["./e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**/*"]
+            "tsConfig": [
+              "./e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**/*"
+            ]
           }
         }
       }
@@ -362,7 +373,9 @@
               "lib/core/tsconfig.lib.json",
               "lib/core/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -403,7 +416,9 @@
               "lib/content-services/tsconfig.lib.json",
               "lib/content-services/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -444,7 +459,9 @@
               "lib/process-services/tsconfig.lib.json",
               "lib/process-services/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -485,7 +502,9 @@
               "lib/process-services-cloud/tsconfig.lib.json",
               "lib/process-services-cloud/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -526,7 +545,9 @@
               "lib/insights/tsconfig.lib.json",
               "lib/insights/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -566,7 +587,9 @@
               "lib/extensions/tsconfig.lib.json",
               "lib/extensions/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -596,7 +619,9 @@
               "lib/testing/tsconfig.lib.json",
               "lib/testing/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -621,5 +646,8 @@
       }
     }
   },
-  "defaultProject": "demoshell"
+  "defaultProject": "demoshell",
+  "cli": {
+    "analytics": false
+  }
 }
